fix loader shifting

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 body{
   background-color: #FAFAFA;
+  overflow-y: hidden;
 }
 .footer {
   width: 100%;
